--- a/views/tiger.pug
+++ b/views/tiger.pug
@@ -10,3 +10,12 @@ block content
                 p #{res.color}
                 p #{res.place}
                 p #{res.weight}
+
+
+
+                script.
+                     function  buy(index){
+
+                        alert(`You purchased item ${index+1}.`)
+
+                     }
