--- a/views/index.pug
+++ b/views/index.pug
@@ -2,19 +2,15 @@ extends layout
 
 block content
   h1= title
-  p Welcome to my world Be happy always#{title}
-  button(type="button", class="btn btn-secondary", onclick="update()") presMe
-  br
-  br
-  div(id="target") Display
-  br
-  a(href='/tiger') Tiger Page
+  p Welcome to #{title} bindu
+  button(type='button',onclick='update()',class='btn btn-primary') Press Me
+  div(id="target") text of Display 
+  script.
+    var client_count = 0;
+    function update(){
+      client_count +=1;
+      document.getElementById("target").innerHTML = "Value now " + client_count;
+    }
+  a(href='tiger') tiger
 
-
-      script. 
-         var client_count = 0;
-            function  update() {
-             client_count++;
-               
-             document.getElementById("target").innerHTML ="Value now "+client_count;
-            }
+  
